--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,14 @@
 	"description": "A simple PSR-3 Logger",
 	"type": "library",
 	"license": "MIT",
+	"homepage": "https://duon.run/log",
+	"authors": [
+		{
+			"name": "Ernst",
+			"email": "ernst@duon.run",
+			"role": "Developer"
+		}
+	],
 	"autoload": {
 		"psr-4": {
 			"Duon\\Log\\": "src/"
@@ -13,24 +21,11 @@
 			"Duon\\Log\\Tests\\": "tests/"
 		}
 	},
-	"authors": [
-		{
-			"name": "ebene fünf GmbH",
-			"email": "info@ebenefuenf.de"
-		}
-	],
 	"require": {
+		"php": "^8.5",
 		"psr/log": "^3.0"
 	},
 	"require-dev": {
-		"duon/dev": "dev-main",
-		"dealerdirect/phpcodesniffer-composer-installer": "^1.0",
-		"phpunit/phpunit": "^12.0",
-		"vimeo/psalm": "^6.10"
-	},
-	"config": {
-		"allow-plugins": {
-			"dealerdirect/phpcodesniffer-composer-installer": true
-		}
+		"duon/dev": "^2.5"
 	}
 }
